force-app/main/default/objects/Vehicle__c/fields/Number_of_doors__c.field-meta.xml
<CustomField>
    <fullName>Number_of_doors__c</fullName>
    <label>Number of doors</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>